initial site structure

--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: 
+cv: passive
+notes: passive
+contact: passive
+description: 
 ---
 
-<div>
-  <h1> Hello World </h1>
+<div class="row marketing">
+	<div class="col-sm-4">
+	<img  class="img-circle avatar" alt="Uli Fahrer" src="img/uli.jpg">
+	</div>
+	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
+		<p class="lead">Hi, I'm <span itemprop="name">Uli Fahrer</span>, a Computer Science student at the <a title="Technische Universität Darmstadt" 				href="http://www.tu-darmstadt.de" target="_blank">Technical University Darmstadt</a>.</p>
+
+		
+	</div>
 </div>
