add additional information to footer

--- a/lectures/index.html
+++ b/lectures/index.html
@@ -7,7 +7,7 @@ notes: passive
 contact: active
 description: 
 ---
-<div class="contact">
+<div class="lectures">
 
 	<p>You can get in touch with me:</p>
 
