add workshop publications

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 layout: default
 title: 
 cv: passive
-notes: passive
-contact: passive
+projects: passive
+publications: passive
+events: passive
+lectures: passive
 description: 
 ---
 
@@ -13,7 +15,5 @@ description:
 	</div>
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
 		<p class="lead">Hi, I'm <span itemprop="name">Uli Fahrer</span>, a Computer Science student at the <a title="Technische Universität Darmstadt" 				href="http://www.tu-darmstadt.de" target="_blank">Technical University Darmstadt</a>.</p>
-
-		
 	</div>
 </div>
