--- a/projects/index.html
+++ b/projects/index.html
@@ -1,8 +1,8 @@
 ---
-layout: default
-title: Notes
+layout: page
+title: Projects
 notes: active
-description: 
+description: Project site
 ---
 <div class="projects">
 
