--- a/publications/index.html
+++ b/publications/index.html
@@ -1,11 +1,28 @@
 ---
-layout: default
-title: Notes
-notes: active
-description: 
+layout: page
+title: Publications
+publications: active
+description: Current puplications
+permalink: /publications/
 ---
 <div class="publications">
+	<ul>
+		<h3>Workshop proceedings</h3>
 
-	{% include post-list.html %}
-
-</div> <!-- .notes -->
+		{% assign sorted_workshops = (site.data.publications | sort: 'year') %}
+		{% for publication in sorted_workshops reversed %}
+			{% if publication.type == "workshop" %}
+				<li>	
+					<p><small>
+						{{ publication.author }} ({{ publication.year }}): {{ publication.title }}.
+						{{ publication.booktitle }},
+						{% if publication.pages %}
+						 pages {{ publication.pages }},
+						{% endif %}
+						{{ publication.publisher }} (<a href="{{ publication.url }}">pdf</a>).
+					</small></p>
+				</li>
+			{% endif %}
+		{% endfor %}
+	</ul>
+</div> <!-- .publications -->
