--- a/index.html
+++ b/index.html
@@ -11,9 +11,21 @@ description:
 
 <div class="row marketing">
 	<div class="col-sm-4">
-	<img  class="img-circle avatar" alt="Uli Fahrer" src="img/uli.jpg">
+		<img  class="img-circle avatar" alt="Uli Fahrer" src="img/uli.jpg">
 	</div>
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
-		<p class="lead">Hi, I'm <span itemprop="name">Uli Fahrer</span>, a Computer Science student at the <a title="Technische Universität Darmstadt" 				href="http://www.tu-darmstadt.de" target="_blank">Technical University Darmstadt</a>.</p>
+		<p class="lead">Hi, I'm <span itemprop="name">Uli Fahrer</span>, a Computer Science student at the 
+			<a title="Technische Universität Darmstadt" href="http://www.tu-darmstadt.de" target="_blank">Technical University Darmstadt</a>.
+		</p>
+		
+		<p>I'm a software developer, technology enthusiast and interested in Natural Language Processing
+			and Web Mining in general. This site serves as portfolio for my various projects.</p>
+		
+		<p>I'm also available for hire as a freelance software developer, or consultant. Drop me a line about your
+		project if you're interested.</p>
+
+		<div class="pull-right">
+			<a href="https://www.linkedin.com/pub/uli-fahrer/"><img alt="Linked_in" src="img/icon-linkedin.png"></a>
+		</div>
 	</div>
 </div>
