add poster proceedings

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: 
+title: Home
 cv: passive
 projects: passive
 publications: passive
 events: passive
 lectures: passive
-description: 
+description: Main page with a short description about the page
 ---
 
 <div class="row marketing">
