add lecture page

--- a/lectures/index.html
+++ b/lectures/index.html
@@ -1,14 +1,42 @@
 ---
-layout: default
-title: Contact
+layout: page
+title: Lectures
 cv: passive
+publications: passive
 projects: passive
-notes: passive
-contact: active
-description: 
+events: passive
+lectures: active
+description:
+permalink: /lectures/
 ---
 <div class="lectures">
+	<p>This is a Java programming course for beginners and students who have no or limited knowledge about programming and want to
+	gain this knowledge before graduating. Currently five degree courses at the TU Darmstadt participate in this lecture
+		i.e Bachelor of Computer Science, Bachelor Economic Computer Science, Psychology in IT and Joint Bachelor of Art. </p>
+		
+	<p>I read this lecture since 2011. It is offered every winter and summer term once and was founded from the 
+		computer science <a href="d120.de">Fachschaft</a> at the Technical University Darmstadt.
+	Usually this course takes one week with lecture in the morning and supervised exercises in the afternoon.
 
-	<p>You can get in touch with me:</p>
+	<p>In 2013 Dennis Albrecht joined the team as replacement for <a href="http://felix-kerger.de/">Felix Kerger</a> who helped to organize the course.
+	Following the latest lecture material. It is divided into lecture slides and practice tasks.
+	Feel free to use it, but refer to my website and name.</p>
 
+	<h3>Pictures</h3>
+	<div class="row">
+		<div class="col-md-6"><img src="../img/lecture1.jpg" class="img-responsive" alt="Responsive image" style="width: 400px; height: 264px;"></div>
+		<div class="col-md-6"><img src="../img/lecture2.jpg" class="img-responsive" alt="Responsive image" style="width: 400px; height: 264px;"></div>
+	</div>
+	
+	<h3>Lecture Slides</h3>
+	<ul>
+		<!-- TODO Add little description -->
+		<li><a href="../files/java/Einleitung.pdf">Introduction</a></li>
+		<li><a href="../files/java/Variablen.pdf">Variables</a></li>
+		<li><a href="../files/java/Anweisungen.pdf">Statements</a></li>
+		<li><a href="../files/java/Schleifen.pdf">Loops</a></li>
+		<li><a href="../files/java/Array.pdf">Arrays</a></li>
+		<li><a href="../files/java/Funktionen.pdf">Functions and Recursion</a></li>
+	</ul>
+	<h3>Exercises</h3>
 </div>
