--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ description: Main page with a short description about the page
 		project if you're interested. Further checkout my <a>resume</a>.</p>
 
 		<div class="pull-right">
-			<a href="https://www.linkedin.com/pub/uli-fahrer/"><img alt="Linked_in" src="img/icon-linkedin.png"></a>
+			<a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank"><img alt="Linked_in" src="img/icon-linkedin.png"></a>
 		</div>
 	</div>
 </div>
