--- a/lectures/index.html
+++ b/lectures/index.html
@@ -27,16 +27,34 @@ permalink: /lectures/
 		<div class="col-md-6"><img src="../img/lecture1.jpg" class="img-responsive" alt="Responsive image" style="width: 400px; height: 264px;"></div>
 		<div class="col-md-6"><img src="../img/lecture2.jpg" class="img-responsive" alt="Responsive image" style="width: 400px; height: 264px;"></div>
 	</div>
+
+	<div class="row">
+		<div class="col-md-6">
+			<h3>Lecture Slides</h3>
+			<ul>
+				<!-- TODO Add little description -->
+				<li><a href="../files/java/Einleitung.pdf" target="_blank">Introduction</a></li>
+				<li><a href="../files/java/Variablen.pdf" target="_blank">Variables</a></li>
+				<li><a href="../files/java/Anweisungen.pdf" target="_blank">Statements</a></li>
+				<li><a href="../files/java/Schleifen.pdf" target="_blank">Loops</a></li>
+				<li><a href="../files/java/Array.pdf" target="_blank">Arrays</a></li>
+				<li><a href="../files/java/Funktionen.pdf" target="_blank">Functions and Recursion</a></li>
+			</ul>
+		</div>
+		<div class="col-md-6">
+			<h3>Exercises</h3>
+			<ul>
+				<li><a href="../files/java/Aufgaben1_14WS_v1.pdf" target="_blank">Exercise 1 </a>(<a href="../files/java/Aufgaben1_14WS_v1_lsg.pdf" target="_blank">Solution</a>)</li>
+				<li><a href="../files/java/Aufgaben2_14WS_v1.pdf" target="_blank">Exercise 2 </a>(<a href="../files/java/Aufgaben2_14WS_v1_lsg.pdf" target="_blank">Solution</a>)</li>
+				<li><a href="../files/java/Aufgaben3_14WS_v1.pdf" target="_blank">Exercise 3 </a>(<a href="../files/java/Aufgaben3_14WS_v1_lsg.pdf" target="_blank">Solution</a>)</li>
+				<li><a href="../files/java/Aufgaben4_14WS_v1.pdf" target="_blank">Exercise 4 </a>(<a href="../files/java/Aufgaben4_14WS_v1_lsg.pdf" target="_blank">Solution</a>)</li>
+				<li><a href="../files/java/Input.java">Input.java</a></li>
+			</ul>
+		</div>
+	</div>
 	
-	<h3>Lecture Slides</h3>
-	<ul>
-		<!-- TODO Add little description -->
-		<li><a href="../files/java/Einleitung.pdf">Introduction</a></li>
-		<li><a href="../files/java/Variablen.pdf">Variables</a></li>
-		<li><a href="../files/java/Anweisungen.pdf">Statements</a></li>
-		<li><a href="../files/java/Schleifen.pdf">Loops</a></li>
-		<li><a href="../files/java/Array.pdf">Arrays</a></li>
-		<li><a href="../files/java/Funktionen.pdf">Functions and Recursion</a></li>
-	</ul>
-	<h3>Exercises</h3>
+	
+	<!-- TODO use template system and data file-->
+	
+	
 </div>
