add missing stuff

--- a/projects/index.html
+++ b/projects/index.html
@@ -21,7 +21,7 @@ description: Project site
                         </li>
                         <li>
                             {% icon fa-download %}
-                            <a href="https://github.com/{{ project.github }}">Download</a>
+                            <a href="{{ project.url }}">Download</a>
                         </li>
                         <li>
                             {% icon fa-home %}
