remove plugin, because it's not supported

--- a/projects/index.html
+++ b/projects/index.html
@@ -16,15 +16,15 @@ description: Project site
                 <dd>
                     <ul class="list-inline">
                         <li>
-                            {% icon fa-github%}
+                            <span class="fa fa-github"></span>
                             <a href="https://github.com/{{ project.github }}">View on GitHub</a>
                         </li>
                         <li>
-                            {% icon fa-download %}
+                            <span class="fa fa-download"></span>
                             <a href="{{ project.url }}">Download</a>
                         </li>
                         <li>
-                            {% icon fa-home %}
+                            <span class="fa fa-home"></span>
                             <a href="{{ project.website }}">Project Site</a>
                         </li>
                     </ul>
