--- a/projects/index.html
+++ b/projects/index.html
@@ -8,63 +8,47 @@ description: Project site
     <!--TODO: Add index for projects click on and scroll-->
 
     {% for project in site.data.projects %}
-        <div class="well">
-            <div class="media">
-                <div class="media-body">
-                    <h3 class="media-heading text-info">{{ project.title }}</h3>
 
-                    <div class="panel panel-primary">
-                        <!-- Default panel contents -->
-                        <div class="panel-heading"><h4 class="panel-title">General</h4></div>
-                        <div class="panel-body">
-                            <p>
-                                <span class="fa fa-wrench"></span>
-                                <span class="text-info">Toolstack:</span> {{ project.tools }}
-                            </p>
+        <div class="panel panel-info">
+            <!-- Default panel contents -->
+            <div class="panel-heading"><h4 class="panel-title">{{ project.title }}</h4></div>
+            <div class="panel-body">
+                {% if project.image %}
+                    <img class="img-responsive" src="../img/{{ project.image }}">
+                {% endif %}
+                <p>{{ project.description | markdownify }}</p>
+                <p>
+                    <span class="fa fa-wrench"></span>
+                    <span class="text-info">Toolstack:</span><strong> {{ project.tools }}</strong>
+                </p>
 
-                            <p>
-                                <span class="fa fa-group"></span>
-                                <span class="text-info">Responsibilities:</span> {{ project.tasks }}
-                            </p>
-                        </div>
-                    </div>
-                    <div class="panel panel-info">
-                        <div class="panel-heading" role="tab">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    Description
-                                </a>
-                            </h4>
-                        </div>
+                <p>
+                    <span class="fa fa-group"></span>
+                    <span class="text-info">Responsibilities:</span> {{ project.tasks }}
+                </p>
 
-                        <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel">
-                            <div class="panel-body">
-                                {{ project.description | markdownify }}
-                            </div>
-                        </div>
-                    </div>
+            </div>
+            <div class="panel-footer panel-default">
+                <ul class="list-inline list-unstyled">
+                    <li><span><i class="glyphicon glyphicon-calendar"></i> {{ project.time }}</span></li>
+                    <li>|</li>
+                    <li>
+                        <span class="fa fa-home"></span>
+                        <a href="{{ project.website }}">Project Site</a>
+                    </li>
+                    <li>|</li>
+                    <li>
+                        <span class="fa fa-github"></span>
+                        <a href="https://github.com/{{ project.github }}">View on GitHub</a>
+                    </li>
+                    <li>|</li>
+                    <li>
+                        <span class="fa fa-download"></span>
+                        <a href="{{ project.url }}">Download</a>
+                    </li>
+                </ul>
 
 
-
-                    <ul class="list-inline list-unstyled">
-                        <li><span><i class="glyphicon glyphicon-calendar"></i> {{ project.time }}</span></li>
-                        <li>|</li>
-                        <li>
-                            <span class="fa fa-home"></span>
-                            <a href="{{ project.website }}">Project Site</a>
-                        </li>
-                        <li>|</li>
-                        <li>
-                            <span class="fa fa-github"></span>
-                            <a href="https://github.com/{{ project.github }}">View on GitHub</a>
-                        </li>
-                        <li>|</li>
-                        <li>
-                            <span class="fa fa-download"></span>
-                            <a href="{{ project.url }}">Download</a>
-                        </li>
-                    </ul>
-                </div>
             </div>
         </div>
     {% endfor %}
