--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ description: Main page with a short description about the page
 			and Web Mining in general. This site serves as portfolio for my various projects.</p>
 		
 		<p>I'm also available for hire as a freelance software developer, or consultant. Drop me a line about your
-		project if you're interested. Further checkout my <a>resume</a>.</p>
+		project if you're interested. Further checkout my <a href="../files/cv/cv.pdf" target="_blank">resume</a>.</p>
 
 		<div class="pull-right">
 			<a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank"><img alt="Linked_in" src="img/icon-linkedin.png"></a>
