--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@ description: Main page with a short description about the page
 		<p>I'm a software developer, technology enthusiast and interested in Natural Language Processing
 			and Web Mining in general. This site serves as portfolio for my various projects.</p>
 		
-		<p>I'm also available for hire as a freelance software developer, or consultant. Drop me a line about your
+		<p>I'm also available for hire as a freelance software developer, or consultant.
+			<a href="mailto:freelancer@uli-fahrer.de" target="_top">Drop me a line</a> about your
 		project if you're interested. Also checkout my <a href="../files/cv/cv.pdf" target="_blank">resume</a>.</p>
 
 		<div class="pull-right">
