--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@ description: Impressum
 <div class="about">
     <h2>Contact</h2>
     Feedback to:
-    <div><img alt="email" src="../img/myemail.png"></div>
+    <p><span class="fa fa-envelope"></span><b> contact[at]uli-fahrer.de</b></p>
 
 
     <h2>Address</h2>
