changed nav style

--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 ---
 layout: default
 title: Home
-projects: passive
-publications: passive
 description: Main page with a short description about the page
 ---
 
-<div class="row marketing">
+<div class="row">
 	<div class="col-sm-4">
 		<img  class="img-circle avatar" alt="Uli Fahrer" src="img/uli.jpg">
 	</div>
@@ -22,8 +20,8 @@ description: Main page with a short description about the page
 			<a href="mailto:freelancer@uli-fahrer.de" target="_top">Drop me a line</a> about your
 		project if you're interested. Also checkout my <a href="../files/cv/cv.pdf" target="_blank">resume</a>.</p>
 
-		<div class="pull-right">
+		<!--<div class="pull-right">
 			<a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank"><img alt="Linked_in" src="img/icon-linkedin.png"></a>
-		</div>
+		</div>-->
 	</div>
 </div>
