--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ description: Main page with a short description about the page
 		<img  class="img-circle avatar" alt="Uli Fahrer" src="img/uli.jpg">
 	</div>
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
-		<p class="lead">Hi, I'm <span itemprop="name">Uli Fahrer</span>, a Computer Science student at the 
+		<p class="lead">Hi, I'm <span itemprop="name">Uli Fahrer</span>, a Computer Science student at the
 			<a title="Technische Universität Darmstadt" href="http://www.tu-darmstadt.de" target="_blank">Technical University Darmstadt</a>.
 		</p>
 		
@@ -20,8 +20,8 @@ description: Main page with a short description about the page
 			<a href="mailto:freelancer@uli-fahrer.de" target="_top">Drop me a line</a> about your
 		project if you're interested. Also checkout my <a href="../files/cv/cv.pdf" target="_blank">resume</a>.</p>
 
-		<!--<div class="pull-right">
+		<div class="pull-right">
 			<a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank"><img alt="Linked_in" src="img/icon-linkedin.png"></a>
-		</div>-->
+		</div>
 	</div>
 </div>
