rewrite the index page

--- a/index.html
+++ b/index.html
@@ -5,23 +5,22 @@ description: Main page with a short description about the page
 ---
 
 <div class="row">
-	<div class="col-sm-4">
-		<img  class="img-circle avatar" alt="Uli Fahrer" src="img/uli.jpg">
-	</div>
-	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
-		<p class="lead">Hi, I'm <span itemprop="name">Uli Fahrer</span>, a Computer Science student at the
-			<a title="Technische Universität Darmstadt" href="http://www.tu-darmstadt.de" target="_blank">Technical University Darmstadt</a>.
-		</p>
-		
-		<p>I'm a software developer, technology enthusiast and interested in Natural Language Processing
-			and Web Mining in general. This site serves as portfolio for my various projects.</p>
-		
-		<p>I'm also available for hire as a freelance software developer, or consultant.
-			<a href="mailto:freelancer@uli-fahrer.de" target="_top">Drop me a line</a> about your
-		project if you're interested. Also checkout my <a href="../files/cv/cv.pdf" target="_blank">resume</a>.</p>
+    <div class="col-sm-4">
+        <img  class="img-circle avatar" alt="Uli Fahrer" src="img/uli.jpg">
+    </div>
+    <h1>Hello,</h1>
+    <h4 class="about-quote">question = ( to ) ? be : ! be; - Wm. Shakespeare</h4>
+    <p class="dropcap">My name is Uli Fahrer, and I'm a Computer Science student at the
+    <a title="Technische Universität Darmstadt" href="http://www.tu-darmstadt.de" target="_blank">Technical University Darmstadt.</a>
+        I'm a software developer, technology enthusiast and interested in Natural Language Processing
+        and Web Mining.</p>
+    <p> This site serves as portfolio for my various projects. I'm also available for hire as a freelance software developer, or consultant.
+        <a href="mailto:freelancer@uli-fahrer.de" target="_top">Drop me a line</a> about your
+        project if you're interested.</p>
 
-		<div class="pull-right">
-			<a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank"><img alt="Linked_in" src="img/icon-linkedin.png"></a>
-		</div>
-	</div>
+        <a class="btn btn-primary" type="button" target="_blank" href="../files/cv/cv.pdf">Grab my Resume</a>
+
+   <!-- <div class="pull-right">
+        <a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank"><img alt="Linked_in" src="img/icon-linkedin.png"></a>
+    </div>-->
 </div>
