Add social circles

--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@ description: Main page with a short description about the page
         and Web Mining.</p>
     <p> This site serves as portfolio for my various projects. I'm also available for hire as a freelance software developer, or consultant.
         <a href="mailto:freelancer@uli-fahrer.de" target="_top">Drop me a line</a> about your
-        project if you're interested.</p>
+        project if you're interested. You can also find me on <a href="https://twitter.com/UliFahrer" target="_blank ">Twitter</a>,
+        <a href="https://github.com/Tooa" target="_blank ">Github</a> and <a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank ">LinkedIn</a>.</p>
 
-        <a class="btn btn-primary" type="button" target="_blank" href="../files/cv/cv.pdf">Grab my Resume</a>
+    <a class="btn btn-primary btn-lg" type="button" target="_blank" href="../files/cv/cv.pdf">Grab my Resume</a>
 
-   <!-- <div class="pull-right">
-        <a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank"><img alt="Linked_in" src="img/icon-linkedin.png"></a>
-    </div>-->
+    <div class="pull-right span4">
+        <ul class="social-icons">
+            <li><a href="mailto:contact@uli-fahrer.de" target="_top"><img class="social-icons" src="img/email.png"></a></li>
+            <li><a href="https://twitter.com/UliFahrer" target="_blank"><img class="social-icons" src="img/twitter.png"></a></li>
+            <li><a href="https://github.com/Tooa"><img class="social-icons" src="img/github.png"></a></li>
+            <li><a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank"><img class="social-icons" src="img/linkedin.png"></a></li>
+        </ul>
+    </div>
 </div>
