add recent posts to blog

--- a/projects/index.html
+++ b/projects/index.html
@@ -3,6 +3,7 @@ layout: page
 title: Projects
 projects: active
 description: Project site
+permalink: /projects/
 ---
 <div class="projects">
     <!--TODO: Add index for projects click on and scroll-->
