--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ description: Main page with a short description about the page
         <ul class="social-icons">
             <li><a href="mailto:contact@uli-fahrer.de" target="_top"><img class="social-icons" src="img/email.png"></a></li>
             <li><a href="https://twitter.com/UliFahrer" target="_blank"><img class="social-icons" src="img/twitter.png"></a></li>
-            <li><a href="https://github.com/Tooa"><img class="social-icons" src="img/github.png"></a></li>
+            <li><a href="https://github.com/Tooa" target="_blank"><img class="social-icons" src="img/github.png"></a></li>
             <li><a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank"><img class="social-icons" src="img/linkedin.png"></a></li>
         </ul>
     </div>
