fix various common bootstrap mistakes

--- a/index.html
+++ b/index.html
@@ -5,28 +5,36 @@ description: Main page with a short description about the page
 ---
 
 <div class="row">
-    <div class="col-sm-4">
-        <img  class="img-circle avatar" alt="Uli Fahrer" src="img/uli.jpg">
-    </div>
-    <h1>Hello,</h1>
-    <h4 class="about-quote">question = ( to ) ? be : ! be; - Wm. Shakespeare</h4>
-    <p class="dropcap">My name is Uli Fahrer, and I'm a Computer Science student at the
-    <a title="Technische Universität Darmstadt" href="http://www.tu-darmstadt.de" target="_blank">Technical University Darmstadt.</a>
-        I'm a software developer, technology enthusiast and interested in Natural Language Processing
-        and Web Mining.</p>
-    <p> This site serves as portfolio for my various projects. I'm also available for hire as a freelance software developer, or consultant.
+	
+	<div class="col-md-4">
+		<img class="img-circle avatar" alt="Uli Fahrer" src="img/uli.jpg">
+	</div>
+	<div class="col-md-8">
+		<h1>Hello,</h1>
+		<h4 class="about-quote">question = ( to ) ? be : ! be; - Wm. Shakespeare</h4>
+		<p class="dropcap">My name is Uli Fahrer, and I'm a Computer Science student at the
+		<a title="Technische Universität Darmstadt" href="http://www.tu-darmstadt.de" target="_blank">Technical University Darmstadt.</a>
+			I'm a software developer, technology enthusiast and interested in Natural Language Processing
+			and Web Mining.</p>
+	</div>
+
+    <div class="col-md-12">
+		<p> This site serves as portfolio for my various projects. I'm also available for hire as a freelance software developer, or consultant.
         <a href="mailto:freelancer@uli-fahrer.de" target="_top">Drop me a line</a> about your
         project if you're interested. You can also find me on <a href="https://twitter.com/UliFahrer" target="_blank ">Twitter</a>,
         <a href="https://github.com/Tooa" target="_blank ">Github</a> and <a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank ">LinkedIn</a>.</p>
+	</div>
+	
+	<div class="col-md-6">
+		<a class="btn btn-primary btn-lg" type="button" target="_blank" href="../files/cv/cv.pdf">Grab my Resume</a>
+	</div>
 
-    <a class="btn btn-primary btn-lg" type="button" target="_blank" href="../files/cv/cv.pdf">Grab my Resume</a>
-
-    <div class="pull-right span4">
-        <ul class="social-icons">
-            <li><a href="mailto:contact@uli-fahrer.de" target="_top"><img class="social-icons" src="img/email.png"></a></li>
-            <li><a href="https://twitter.com/UliFahrer" target="_blank"><img class="social-icons" src="img/twitter.png"></a></li>
-            <li><a href="https://github.com/Tooa" target="_blank"><img class="social-icons" src="img/github.png"></a></li>
-            <li><a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank"><img class="social-icons" src="img/linkedin.png"></a></li>
-        </ul>
-    </div>
+	<div class="col-md-6">
+		<ul class="pull-right social-icons">
+		    <li><a href="mailto:contact@uli-fahrer.de" target="_top"><img class="social-icons" src="img/email.png"></a></li>
+		    <li><a href="https://twitter.com/UliFahrer" target="_blank"><img class="social-icons" src="img/twitter.png"></a></li>
+		    <li><a href="https://github.com/Tooa" target="_blank"><img class="social-icons" src="img/github.png"></a></li>
+		    <li><a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank"><img class="social-icons" src="img/linkedin.png"></a></li>
+		</ul>
+	</div>
 </div>
