--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@ description: Main page with a short description about the page
 
 <div class="row">
 	
-	<div class="col-md-4">
+	<div class="col-md-4 col-xs-4">
 		<img class="img-circle avatar" alt="Uli Fahrer" src="img/uli.jpg">
 	</div>
-	<div class="col-md-8">
+
+	<div class="col-md-8 col-xs-8">
 		<h1>Hello,</h1>
 		<h4 class="about-quote">question = ( to ) ? be : ! be; - Wm. Shakespeare</h4>
+	</div>
+
+	<div class="col-md-8 col-xs-12">
 		<p class="dropcap">My name is Uli Fahrer, and I'm a Computer Science student at the
 		<a title="Technische Universität Darmstadt" href="http://www.tu-darmstadt.de" target="_blank">Technical University Darmstadt.</a>
 			I'm a software developer, technology enthusiast and interested in Natural Language Processing
@@ -25,11 +29,11 @@ description: Main page with a short description about the page
         <a href="https://github.com/Tooa" target="_blank ">Github</a> and <a href="https://www.linkedin.com/pub/uli-fahrer/" target="_blank ">LinkedIn</a>.</p>
 	</div>
 	
-	<div class="col-md-6">
-		<a class="btn btn-primary btn-lg" type="button" target="_blank" href="../files/cv/cv.pdf">Grab my Resume</a>
+	<div class="col-md-6 col-xs-4">
+		<a class="btn btn-primary" type="button" target="_blank" href="../files/cv/cv.pdf">Grab my Resume</a>
 	</div>
 
-	<div class="col-md-6">
+	<div class="col-md-6 col-xs-8">
 		<ul class="pull-right social-icons">
 		    <li><a href="mailto:contact@uli-fahrer.de" target="_top"><img class="social-icons" src="img/email.png"></a></li>
 		    <li><a href="https://twitter.com/UliFahrer" target="_blank"><img class="social-icons" src="img/twitter.png"></a></li>
