--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ description: Main page with a short description about the page
 			and Web Mining.</p>
 	</div>
 
-    <div class="col-md-12">
+    <div class="col-md-12 col-xs-12">
 		<p> This site serves as portfolio for my various projects. I'm also available for hire as a freelance software developer, or consultant.
         <a href="mailto:freelancer@uli-fahrer.de" target="_top">Drop me a line</a> about your
         project if you're interested. You can also find me on <a href="https://twitter.com/UliFahrer" target="_blank ">Twitter</a>,
