--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ description: Main page with a short description about the page
 
 	<div class="col-md-8 col-xs-8">
 		<h1>Hello,</h1>
-		<h4 class="about-quote">question = ( to ) ? be : ! be; - Wm. Shakespeare</h4>
+		<h4 class="about-quote">question = ( to ) ? be : ! be; - William Shakespeare</h4>
 	</div>
 
 	<div class="col-md-8 col-xs-12">
