--- a/projects/index.html
+++ b/projects/index.html
@@ -42,17 +42,53 @@ permalink: /projects/
                         <div class="holder col-md-12">
                             <img class="img-responsive" src="../img/{{ project.image }}" alt="...">
                         </div>
-                        <div class="col-md-12">
-                            <dt><span class="fa fa-wrench"></span> Toolstack</dt>
-                            <dd>
-                                {% assign tools = project.tools | split: ', ' %}
-                                {% for tool in tools %}
-                                <span class="label label-warning">{{ tool }}</span>
-                                {% endfor %}
+                        <div class="row">
+                            <div class="col-md-3"></div>
 
-                            </dd>
-                            <p>{{ project.description | markdownify }}</p>
-                            <button type="button" class="btn btn-primary">View more</button>
+                        </div>
+                        <div class="col-md-12">
+                            <dl>
+                                <!--<dd><span><i class="glyphicon glyphicon-calendar"></i> {{ project.time }}</span></dd>-->
+                                <dt><span class="fa fa-wrench"></span> Toolstack</dt>
+                                <dd>
+                                    {% assign tools = project.tools | split: ', ' %}
+                                    {% for tool in tools %}
+                                    <span class="label label-warning">{{ tool }}</span>
+                                    {% endfor %}
+
+                                </dd>
+                                <dt><span class="fa fa-bookmark"></span> Description</dt>
+                                <dd>
+                                    <p>{{ project.description | markdownify }}</p>
+
+                                    <ul class="list-inline list-unstyled media-control">
+                                        <li><span><i class="glyphicon glyphicon-calendar"></i> {{ project.time }}</span></li>
+                                        <li>|</li>
+                                        <li>
+                                            <span class="fa fa-home"></span>
+                                            <a href="{{ project.website }}">Project Site</a>
+                                        </li>
+                                        <li>|</li>
+                                        <li>
+                                            <span class="fa fa-github"></span>
+                                            <a href="https://github.com/{{ project.github }}">View on GitHub</a>
+                                        </li>
+                                        <li>|</li>
+                                        <li>
+                                            <span class="fa fa-download"></span>
+                                            <a href="{{ project.url }}">Download</a>
+                                        </li>
+
+                                        {% if project.facebook %}
+                                        <li>|</li>
+                                        <li>
+                                            <span class="fa fa-facebook-square"></span>
+                                            <a href="{{ project.facebook }}">FB</a>
+                                        </li>
+                                        {% endif %}
+                                    </ul>
+                                </dd>
+                            </dl>
                         </div>
                     </div>
 
