--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description: Main page with a short description about the page
 
 <div class="row">
 	
-	<div class="col-md-4 col-xs-4">
+	<div class="col-md-4 col-xs-4 text-center">
 		<img class="img-circle avatar" alt="Uli Fahrer" src="img/uli.jpg">
 	</div>
 
@@ -30,7 +30,7 @@ description: Main page with a short description about the page
 	</div>
 	
 	<div class="col-md-6 col-xs-4">
-		<a class="btn btn-primary" type="button" target="_blank" href="../files/cv/cv.pdf">Grab my Resume</a>
+		<a class="btn  btn-lg btn-primary" type="button" target="_blank" href="../files/cv/cv.pdf">Grab my Resume</a>
 	</div>
 
 	<div class="col-md-6 col-xs-8">
